prevent selects in sidebar from growing too large, re #6253
git-svn-id: svn://develop.studip.de/studip/trunk@36680 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -292,14 +292,7 @@ select.sidebar-selectlist {
     }
 }
 
-// TODO: Remove this ASAP!
-/*
-.sidebar-widget.sidebar-infobox {
-    border-color: @red;
-    background: @light-gray-color-20;
-
-    .sidebar-widget-header {
-        background: @red-40;
-    }
+// Prevent selects from growing too large
+.sidebar select {
+    max-width: 100%;
 }
-*/
